                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 18-07-2005 added: routines for knowing wich field is currently being rendered, can be used to sync interlaced video
 - 18-07-2005 fixed: if xbmc ran out of memmory when starting a video, it often lockup with a black screen
 - 18-07-2005 fixed: deinterlacing in mplayer wasn't possible to enable without enabling postprocessing
 - 18-07-2005 added: Calculate Folder size to My Files.
 - 18-07-2005 fixed: Settings are saved on exit from the settings screens and on exit from the app.
 - 18-07-2005 added: Separator bar to settings screens.
 - 18-07-2005 updated: German (Austrian) language file (Thnx to CEOMR)
 - 18-07-2005 updated: German language file
 - 17-07-2005 fixed: dvdplayer crashed if a dvd had 20 streams at the same time
 - 17-07-2005 added: System.FPS infolabel.
 - 17-07-2005 fixed: Paplayer didn't close files immediately.
 - 17-07-2005 added: GUI Auto Start Up Visualisation: If is Playing Audio, after defined Idle time in Sec. the Visualisation Window will then start up! [GeminiServer]
                     The AutoStartUpTime will be reseted on any keypress! Location: Settings - My Music - Music - Auto Visualisation Fullscreen
 - 17-07-2005 added: FTP Client: some Log Debug outputs [GeminiServer]
 - 17-07-2005 fixed: FTP Client: double Connection fix [GeminiServer]
 - 17-07-2005 added: Skinning: System.IdleTime(seconds) --> will be true if the idle time is equal to the defined seconds [GeminiServer]
                     Skinning use: System.IdleTime(10) after 10 seconds it is true otherwise false! You can define more <visible> tags.. but the greater time in seconds will used